@@ -209,7 +209,7 @@ public abstract class BDFileSystem extends FileSystem {
 
         String resolvedPath = fs.resolve(parent, child);
         String cachePath = BDJLoader.getCachedFile(resolvedPath);
-        if (cachePath != resolvedPath && !cachePath.equals(resolvedPath)) {
+        if (!cachePath.equals(resolvedPath)) {
             logger.info("resolve(p,c): using cached " + cachePath + " (" + resolvedPath + ")");
         }
         return cachePath;
@@ -228,13 +228,15 @@ public abstract class BDFileSystem extends FileSystem {
     }
 
     public boolean isInvalid(File f) {
+        boolean res = false;
         try {
             Method m = fs.getClass().getDeclaredMethod("isInvalid", new Class[] { File.class });
             Object[] args = new Object[] {(Object)f};
             Boolean result = (Boolean)m.invoke(fs, args);
-            return result.booleanValue();
+            res = result.booleanValue();
         } finally {
-            return false;
+            /* return here will drop all exceptions from try block (and override possible return value from try block) */
+            return res;
         }
     }
 
@@ -249,7 +251,7 @@ public abstract class BDFileSystem extends FileSystem {
 
         String resolvedPath = fs.resolve(f);
         String cachePath = BDJLoader.getCachedFile(resolvedPath);
-        if (cachePath != resolvedPath && !cachePath.equals(resolvedPath)) {
+        if (!cachePath.equals(resolvedPath)) {
             logger.info("resolve(f): using cached " + cachePath + " (" + resolvedPath + ")");
         }
         return cachePath;
@@ -261,7 +263,7 @@ public abstract class BDFileSystem extends FileSystem {
 
         String canonPath = fs.canonicalize(path);
         String cachePath = BDJLoader.getCachedFile(canonPath);
-        if (cachePath != canonPath && !cachePath.equals(canonPath)) {
+        if (!cachePath.equals(canonPath)) {
             logger.info("canonicalize(): Using cached " + cachePath + " for " + canonPath + "(" + path + ")");
         }
         return cachePath;
@@ -343,7 +345,7 @@ public abstract class BDFileSystem extends FileSystem {
                 args = new Object[] {(Object)path};
             } catch (NoSuchMethodException e) {
                 m  = fs.getClass().getDeclaredMethod("createFileExclusively", new Class[] { String.class, boolean.class });
-                args = new Object[] {(Object)path, (Object)new Boolean(restrictive)};
+                args = new Object[] {(Object)path, (Object)Boolean.valueOf(restrictive)};
             }
         } catch (NoSuchMethodException e) {
             error("no matching FileSystem.createFileExclusively found !");
